Bug 957396 - Enlarge container constraints when MinSize is bigger than MaxSize. r=enndeakin